Pass conformance/attribs WebGL conformance tests https://bugs.webkit.org/show_bug.cgi?id=200901

Patch by Kai Ninomiya <kainino@chromium.org> on 2019-08-22
Reviewed by Alex Christensen.

Tested by
LayoutTests/webgl/*/conformance/attribs/gl-vertexattribpointer.html,
LayoutTests/webgl/2.0.0/conformance/more/functions/vertexAttribPointerBadArgs.html,
and other conformance/attribs/* tests not included in LayoutTests.
LayoutTests/webgl/1.0.2/conformance/more/functions/vertexAttribPointerBadArgs.html
fails as expected because it is an old snapshot of an incorrect test.

* html/canvas/WebGLRenderingContextBase.cpp:
(WebCore::WebGLRenderingContextBase::validateVertexAttributes):
(WebCore::WebGLRenderingContextBase::vertexAttribPointer):
* html/canvas/WebGLVertexArrayObjectBase.cpp:
(WebCore::WebGLVertexArrayObjectBase::setVertexAttribState):
* html/canvas/WebGLVertexArrayObjectBase.h:

Canonical link: https://commits.webkit.org/214744@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249007 268f45cc-cd09-0410-ab3c-d52691b4dbfc